[package]
name = "mirvestigator"
version = "0.1.1"
authors = ["Wei-ju Wu <weiju.wu@gmail.com>"]
edition = "2021"
description = "Rust implementation of miRvestigator HMM algorithm"

[dependencies]
ftp = "3.0.1"
flate2 = "1.0.24"
itertools = "0.10.5"
json = "0.12.4"
rayon = "1.5.3"
clap = { version = "4.0.10", features = ["derive"] }

[profile.release]
lto = true
